--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,9 @@ set(compile_dirs
 )
 # compile only the necessary modules
 list(APPEND compile_dirs
-  # civmap
-  # civview
-  civloc
+  civmap
+  civview
+#   civloc
   # planning
   # routing
   # 
