progress in docker build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ endif()
 
 find_package(Threads REQUIRED)
 find_package(PkgConfig REQUIRED)
-find_package(fastrtps REQUIRED)
-find_package(fastcdr REQUIRED)
-find_package(Poco REQUIRED COMPONENTS Foundation)
+# find_package(fastrtps REQUIRED)
+# find_package(fastcdr REQUIRED)
+# find_package(Poco REQUIRED COMPONENTS Foundation)
 
 find_package(glog REQUIRED)
 find_package(Protobuf REQUIRED)
@@ -18,20 +18,20 @@ find_package(Protobuf REQUIRED)
 pkg_check_modules(Gflags REQUIRED gflags)
 
 find_package(absl REQUIRED)
-find_package(PROJ4 REQUIRED)
+
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${fastcdr_INCLUDE_DIR}
-    ${fastrtps_INCLUDE_DIR}
+    # ${fastcdr_INCLUDE_DIR}
+    # ${fastrtps_INCLUDE_DIR}
     ${Protobuf_INCLUDE_DIRS}
     ${Glog_INCLUDE_DIRS}
     ${Gflags_INCLUDE_DIRS}
 )
 
 link_directories(
-    ${fastcdr_LIB_DIR}
-    ${fastrtps_LIB_DIR}
+    # ${fastcdr_LIB_DIR}
+    # ${fastrtps_LIB_DIR}
     ${Protobuf_LIBRARY_DIRS}
     ${Glog_LIBRARY_DIRS}
     ${Gflags_LIBRARY_DIRS}
