--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -6,6 +6,7 @@ if (NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE "Debug")
 endif()
 
+find_package(PROJ4 REQUIRED)
 # platform control
 if(TARGET_VENDER STREQUAL MDC)
     message("---mdc not build zloc/view----")
