--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 project(civauto)
 set(CMAKE_CXX_STANDARD 14)
 if(NOT CMAKE_BUILD_TYPE)
@@ -59,7 +59,7 @@ set(compile_dirs
 # compile only the necessary modules
 list(APPEND compile_dirs
   civmap
-#   civview
+  civview
   civloc
   # planning
   # routing
