--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "cfenv": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "msg_data_def.h": "c",
+        "core": "cpp"
     }
 }
